--- a/code/my project/myproject.css
+++ b/code/my project/myproject.css
@@ -2,35 +2,37 @@
     margin: 0;
     padding: 0;
     }
-
+/* parent of myproject */
 .portfolio
-{
-    /* background-color: red; */
+{   
     min-width: calc(100% - 300px);
-    display: grid;
-    /* width: 25%; */
-    /* grid-gap:65px 25px; */
+    display: grid; 
     grid-template-columns: 1fr;
     grid-template-rows: auto 1fr;  
 }
+/* myproject */
+.title {
 
+    text-align: center;
+    height: 66px;
+    font-size: xx-large;
+    font-family:'Times New Roman', Times, serif;
+}
 .cont
 {    
-    width: 100%;
+    width: 96%;
     display: grid;
-    grid-gap: 10px;
+    grid-gap: 45px 10px;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: auto auto;
 }
 
-.title {
-
-    text-align: center;
-}
 .item {
     background-color: rgb(250, 247, 242);
+    margin-left: 35px;
     
 }
+/* images of the section */
 .img1,.img2,.img3,.img4,.img5,.img6{
     width: 100%;
     height: 300px;
@@ -52,5 +54,20 @@
 }
 .img6 {
     background-image: url("ressources/d3.jpg");
+}
+/* text */
+h3{
+    margin: 8px 0px 5px;
+    font-size: x-large;
+}
+h5 {
+    margin-bottom: 8px;
+}
+p {
+    margin-bottom:40px ;
+    padding-top: 5px;
+}
+h3, h5, p {
+    padding-left: 15px;
 }
 
