--- a/code/css/style.css
+++ b/code/css/style.css
@@ -1,20 +1,35 @@
-.container{
+*{
+    margin: 0px;
+    padding: 0px;
+}
+body > section{
+    width:calc(100% - 300px);
+    margin-left:auto;
+    font-family:'popines', serif;
+    background: #f1f1f1;
+}
+html {
+    scroll-behavior:smooth;}
+
+.countainer{
     width: 100%;
     /* height: 500px; */
-    background-color:#f1f1f1;
+    /* background-color:#f1f1f1; */
     display: grid;
-    grid-template-columns: 300px 100px 100px 100px 100px;
+    grid-template-columns: 300px 1620px 100px 100px 100px;
     grid-template-rows: repeat(5, 20%);
-    grid-gap: 5px;
+    /* grid-gap: 5px; */
 
 }
 /*  Navigation verticale / Left Fixed Navbar */
 .nav-gauche {
     width: 300px;
     height: 100vh;
-    /* padding-left: 35px; */
     padding-top: 30px;
-    min-height: 800px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     background:linear-gradient(#90EAF7,#3B7982 ) ;
     position:fixed;
     border-right: 1px solid #f1f1f1;
@@ -24,32 +39,60 @@
 
 }
 .cercle-portrait{
-    margin-left: 70px;
+    flex: 1;
     width: 230px;
-    height: 250px;
+    height: 230px;
     border-radius: 50%;
     overflow: hidden;
-    font-size: 12px;
-    
-    
-
 }
 .cercle-portrait img {
     
     width: 100%;
+    height: 100%;
 }
-.blocs-menu{
+ul{
+    padding-top: 30px;
+    flex: 2;
     text-align: center;
-    padding-top: 20px;
+    list-style-type: none;
+    
 }
-
-.blocs-menu a
-{
+ a {
     text-decoration: none;
     color: black;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 50px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px; 
 }
+     
+
+li{ 
+    padding: 10px;
+}
+i{
+    flex: 3;
+    font-size: 60px;
+    padding-bottom: 82px;
+    z-index: 5;
+   
+}
+   /* section accueil */
+   header{
+       width:1620px;
+       height:1082px;
+       grid-area: 1/2 / 2/6; 
+       background-image:url("../images/imgPres.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        ;
+   }
+
+
+
+
+
+
+
+
 
 
 .nav-gauche{
@@ -59,16 +102,4 @@
     margin: 0;
     /* padding: 36px; */
 }
-html {
-    scroll-behavior:smooth;
-}
-body > section{
-    width:calc(100% - 300px);
-    margin-left:auto;
-    font-family:'popines', serif;
-    background: #f1f1f1;
-}
 
-
-
-}
