--- a/code/css/style.css
+++ b/code/css/style.css
@@ -1,24 +1,26 @@
-*{
-    margin: 0px;
-    padding: 0px;
+*, ::before, ::after{
+    box-sizing: border-box;
+    margin: 0;
+    padding:0;
 }
+
 body > section{
-    width:calc(100% - 300px);
-    margin-left:auto;
+    /* width: calc (100% - 300px); */
+    margin-left: 300px;
     font-family:'popines', serif;
     background: #f1f1f1;
 }
 html {
-    scroll-behavior:smooth;}
+    scroll-behavior: smooth;
+}
 
 .countainer{
     width: 100%;
-    /* height: 500px; */
-    /* background-color:#f1f1f1; */
+    background-color:#f1f1f1;
     display: grid;
-    grid-template-columns: 300px 1620px 100px 100px 100px;
-    grid-template-rows: repeat(5, 20%);
-    /* grid-gap: 5px; */
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+   
 
 }
 /*  Navigation verticale / Left Fixed Navbar */
@@ -40,21 +42,24 @@ html {
 }
 .cercle-portrait{
     flex: 1;
-    width: 230px;
-    height: 230px;
-    border-radius: 50%;
-    overflow: hidden;
 }
 .cercle-portrait img {
     
-    width: 100%;
-    height: 100%;
+    width: 230px;
+    /* height: 230px; */
+    border-radius: 50%;
+
 }
 ul{
-    padding-top: 30px;
-    flex: 2;
+    padding: 30px 0;
+    flex: 3;
     text-align: center;
     list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+
     
 }
  a {
@@ -64,28 +69,28 @@ ul{
     font-size: 20px; 
 }
      
-
-li{ 
-    padding: 10px;
-}
 i{
-    flex: 3;
+    flex: 1;
     font-size: 60px;
-    padding-bottom: 82px;
+    padding-bottom: 50px;
     z-index: 5;
    
 }
    /* section accueil */
    header{
-       width:1620px;
-       height:1082px;
+       
+       height:100vh;
        grid-area: 1/2 / 2/6; 
        background-image:url("../images/imgPres.jpg");
         background-repeat: no-repeat;
         background-size: cover;
-        ;
    }
-
+   h1{
+       text-align:left;
+       padding-top: 130px;
+       padding-left: 130px;
+       font-size: 50px;
+   }
 
 
 
