--- a/code/css/stylos.css
+++ b/code/css/stylos.css
@@ -116,6 +116,7 @@ i{
  }
  .btn-acc:hover{
      background-color:gray;
+     color:white;
  }
     .btn-acc2{
         margin-left: 30px;
@@ -554,4 +555,5 @@ button{
 }
 .cat:hover{
     background-color: gray;
+    color:white;
 }
